# new_mnist

./: Dockerfile  README.md  pyproject.toml  run_db.sh
src/mnist/: Dockerfile  db.py  main.py  worker.py
